# 10-Identity-Management-Compact-ExpressOpenApi-NLayer/identitymanagementcompact-microservice/api/repositories/user/mongo.user.repository.js
@@ -59,10 +59,63 @@ async function deleteUser(id) {
   return result;
 }
 
+async function addGroupToUser(userId, groupId) {
+  log.debug(`${MODULE_NAME}:${addGroupToUser.name} (IN) -> userId: ${userId}, groupId: ${groupId}`);
+
+  const userFound = await getUserByFilter({ id: userId });
+
+  // Check if user found
+  // TODO
+
+  // Check if groupId found
+  // TODO
+
+  let result = userFound;
+
+  // Check if user groups contains the groupId
+  const groupIdFound = userFound.groups.find(x => x === groupId);
+  if (!groupIdFound) {
+    userFound.groups.push(groupId);
+    result = await mongoHelper.update(User, userId, userFound);
+  }
+
+  log.debug(`${MODULE_NAME}:${addGroupToUser.name} (OUT) -> result: ${result}`);
+  return result;
+}
+
+async function deleteGroupFromUser(userId, groupId) {
+  log.debug(`${MODULE_NAME}:${deleteGroupFromUser.name} (IN) -> userId: ${userId}, groupId: ${groupId}`);
+
+  const userFound = await getUserByFilter({ id: userId });
+
+  // Check if user found
+  // TODO
+
+  // Check if groupId found
+  // TODO
+
+  let result = userFound;
+
+  // Check if user groups contains the groupId
+  const groupIdFound = userFound.groups.find(x => x === groupId);
+  if (groupIdFound) {
+    console.log(`--------------------> Group FOUND!!!!!!!!!`)
+    userFound.groups = userFound.groups.filter(e => e !== groupId);
+    result = await mongoHelper.update(User, userId, userFound);
+  } else {
+    console.log(`-------------------> GROUP NOT FOUND`)
+  }
+
+  log.debug(`${MODULE_NAME}:${deleteGroupFromUser.name} (OUT) -> result: ${result}`);
+  return result;
+}
+
 module.exports = {
   getUsers,
   getUserByFilter,
   createUser,
   updateUser,
   deleteUser,
+  addGroupToUser,
+  deleteGroupFromUser,
 };
